--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-#      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - DOCKER_LOGIN=(docker login --username AWS --password-stdin 764057086582.dkr.ecr.ap-south-1.amazonaws.com)
-      - aws ecr get-login-password --region ap-south-1 | $DOCKER_LOGIN
+#     - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 764057086582.dkr.ecr.ap-south-1.amazonaws.com
       - REPOSITORY_URI=764057086582.dkr.ecr.ap-south-1.amazonaws.com/hello
 #      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
 #      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
