--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
 #      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
       - docker build -t $REPOSITORY_URI:mongodb_v1 -f Dockerfile-db .
-      - docker tag $REPOSITORY_URI:mongodb_v1 $REPOSITORY_URI:$IMAGE_TAG
+#      - docker tag $REPOSITORY_URI:mongodb_v1 $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
