--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:mongodb_v1 -f Dockerfile-db .
+      - docker build -t $REPOSITORY_URI:gaia-server -f Dockerfile-db .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
@@ -28,4 +28,4 @@ phases:
       - cat imagedefinitions.json 
 artifacts:
     files: imagedefinitions.json
-#      abc
+
