--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,31 +1,19 @@
 version: 0.2
-
-
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 764057086582.dkr.ecr.ap-south-1.amazonaws.com
-      - REPOSITORY_URI=764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-app-demo
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - REPOSITORY_URI=764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db
   build:
     commands:
-      - echo Build started on `date`
+      - echo Build started on date
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t  mongodb:v1 -f Dockerfile-db .
+      - docker tag mongodb:v1 764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db:latest
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"gala-server","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - cat imagedefinitions.json 
-artifacts:
-    files: imagedefinitions.json
-
+      - echo Build completed on date
+      - echo Pushing the Docker image...
+      - docker push 764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db:latest
