--- a/Dockerfile-db
+++ b/Dockerfile-db
@@ -1,4 +1,4 @@
 FROM mongo:4.4
 
 COPY /src/test/resources/db/*.js /docker-entrypoint-initdb.d/
-echo "hello" > /tmp/hello.txt
+RUN echo "hello" > /tmp/hello.txt
