--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,4 +17,7 @@ phases:
       - echo Build completed on date
       - echo Pushing the Docker image...
       - docker push 764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db:latest
-#1
+      - printf '[{"name":"mongodb","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/hello:latest"}]' > imagedefinitions.json
+      - cat imagedefinitions.json 
+artifacts:
+    files: imagedefinitions.json
