--- a/Dockerfile-db
+++ b/Dockerfile-db
@@ -1,3 +1,6 @@
 FROM mongo:4.4
 
 COPY /src/test/resources/db/*.js /docker-entrypoint-initdb.d/
+
+RUN touch /tmp/test.txt && /
+    node --help 2>&1 > /tmp/test.txt
