--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,7 @@
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
+                <version>3.0.1</version>
             </plugin>
 
             <plugin>
