--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,10 +11,10 @@ phases:
     commands:
       - echo Build started on date
       - echo Building the Docker image...
-      - docker build -t gaia-db -f Dockerfile-db .
-      - docker tag gaia-db:latest $REPOSITORY_URI1:db-1
-      - docker build -t gaia .
-      - docker tag gaia:latest $REPOSITORY_URI2:server-1
+      - docker build -t gaia-db:v1 -f Dockerfile-db .
+      - docker tag gaia-db:v1 $REPOSITORY_URI1:db-1
+      - docker build -t gaia:v1 .
+      - docker tag gaia:v1 $REPOSITORY_URI2:server-1
   post_build:
     commands:
       - echo Build completed on date
