--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo Build started on date
-      - echo Building the Docker image...
+      - echo Building the Docker image....
       - docker build -t gaia-db:v1 -f Dockerfile-db .
       - docker tag gaia-db:v1 $REPOSITORY_URI1:db-1
       - docker build -t gaia:v1 .
