--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 764057086582.dkr.ecr.ap-south-1.amazonaws.com
       - REPOSITORY_URI1=764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db
-      - REPOSITORY_URI2=764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-app-demo
+      - REPOSITORY_URI2=764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-server
   build:
     commands:
       - echo Build started on date
@@ -22,7 +22,7 @@ phases:
       - docker push $REPOSITORY_URI1:db-1
       - docker push $REPOSITORY_URI2:server-1
       - printf '[{"name":"mongodb","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db:db-1"}]' >> imagedefinitions.json
-      - printf '[{"name":"gaia-server","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-app-demo:server-1"}]' >> imagedefinitions.json
+      - printf '[{"name":"gaia-server","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-server:server-1"}]' >> imagedefinitions.json
       - cat imagedefinitions.json 
 artifacts:
     files: imagedefinitions.json
