--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,14 +12,14 @@ phases:
       - echo Building the Docker image....
       - docker build -t gaia-db:v1 -f Dockerfile-db .
       - docker tag gaia-db:v1 $REPOSITORY_URI1:db-1
-      - docker build -t gaia:v1 .
-      - docker tag gaia:v1 $REPOSITORY_URI2:server-1
+   #   - docker build -t gaia:v1 .
+     # - docker tag gaia:v1 $REPOSITORY_URI2:server-1
   post_build:
     commands:
       - echo Build completed on date
       - echo Pushing the Docker image....
       - docker push $REPOSITORY_URI1:db-1
-      - docker push $REPOSITORY_URI2:server-1
+     # - docker push $REPOSITORY_URI2:server-1
       - printf '[{"name":"mongodb","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-db:db-1"}]' >> imagedefinitions.json
       - printf '[{"name":"gaia-server","imageUri":"764057086582.dkr.ecr.ap-south-1.amazonaws.com/gaia-server:server-1"}]' >> imagedefinitions.json
       - cat imagedefinitions.json 
